<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ScrewShop</string>
    <string name="screw_shop_summary_title">Chopped Up, not Slopped Up...</string>
    <string name="action_settings">Settings</string>
    <string name="press_back_again">Press back again to leave ScrewShop!</string>
    <string name="screwd_device_success">Yay! You\'re Screw\'d!!</string>
    <string name="screwd_device_failure">Sorry, this isn\'t a Screw\'d device. Exiting...</string>
    <string name="restart_systemui">Restart SystemUI</string>
    <string name="lean">About</string>
    <string name="y_u_no_have_lean">Lean is not detected. It is either missing or frozen with Titanium Backup. Please defrost the Lean app with Titanium Backup or re-flash the ROM to put Lean back.\n\nThe only way for you to be seeing this message if YOU removed or froze Lean. This is not a mistake.</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="attention">Attention</string>
    <string name="enabled">Enabled</string>
    <string name="default_string">Default</string>
    <string name="add">Add</string>
    <string name="choose_app">Choose app</string>
    <string name="empty_title">Empty</string>
    <string name="normal_title">Normal</string>
    <string name="hidden_title">Hidden</string>
    <string name="position_title">Position</string>
    <string name="position_right_title">Right</string>
    <string name="position_centered_title">Centered</string>
    <string name="help">Help</string>
    <string name="reset_message">Reset all entries to default?</string>
    <string name="profiles_add">Add...</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="profile_reset_title">Reset</string>
    <string name="show_title">Show</string>
    <string name="reset_paranoid">Paranoid</string>
    <string name="reset_android">Android</string>
    <string name="reset_screwd">Screw\'d</string>
    <string name="reset_colors">Reset colors</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="ui_tab">UI</string>
    <string name="system_tab">System</string>
    <string name="navigation_tab">Navigation</string>
    <string name="statusbar">Statusbar</string>
    <string name="qs">Quick Settings</string>
    <string name="qs_tiles">QS Tiles</string>
    <string name="recents">Recents</string>
    <string name="powermenu">Power Menu</string>
    <string name="lockscreen">Lockscreen</string>
    <string name="notifications">Notifications</string>
    <string name="pie">PIE</string>
    <string name="navbar">Navigation Bar</string>
    <string name="appcirclebar">App Circle Bar</string>
    <string name="animations">Animations</string>
    <string name="lcd">LCD Density</string>
    <string name="ex_desk">Expanded Desktop</string>
    <string name="sounds">Sounds</string>
    <string name="misc">Misc</string>
    <string name="trans">Transparency</string>
    <string name="buttons">Buttons</string>
    <string name="gestureany">Gesture Anywhere</string>
    <string name="fp">Fingerprint</string>
    <string name="oneplus_gestures">OnePlus Gestures</string>
    <string name="fingerprint_gestures_category">Gestures</string>
    <string name="general">General</string>
    <string name="system_animations">System Animations</string>
    <string name="toast">Toast</string>
    <string name="listview">ListView</string>
    <string name="icons">Icons</string>
    <string name="entries">Entries</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="clock">Clock</string>
    <string name="the_interface">Interface</string>
    <string name="gestures">Gestures</string>
    <string name="pulldown">Pulldown options</string>
    <string name="qs_tile_layout">Tile Layout</string>
    <string name="battery">Battery</string>
    <string name="breathing_notifications_category">Breathing Notifications</string>
    <string name="statusbar_logo">Statusbar Logo</string>
    <string name="weather">Weather options</string>
    <string name="vol_dialog">Volume Dialog</string>
    <string name="vol_rock">Volume Rocker</string>
    <string name="options">Options</string>
    <string name="ss_prefs">Screw\'d Settings preferences</string>
    <string name="qs_header_title">Quick settings header</string>
    <string name="custom_header_cat">Header Image</string>
    <string name="aosp_recents_title">AOSP recents</string>
    <string name="fingerprint_cat">Fingerprint</string>
    <string name="advanced_reboot_title">Advanced reboot</string>
    <string name="advanced_reboot_summary">When unlocked, include options in the power menu for rebooting into recovery, bootloader or performing a soft reboot</string>
    <string name="power_menu_title">Power menu</string>
    <string name="power_menu_power_title">Power off</string>
    <string name="power_menu_reboot_title">Reboot menu</string>
    <string name="power_menu_screenshot_title">Screenshot</string>
    <string name="power_menu_torch_title">Flashlight</string>
    <string name="power_menu_airplane_title">Airplane mode</string>
    <string name="power_menu_users_title">User switcher</string>
    <string name="power_menu_settings_title">Settings shortcut</string>
    <string name="power_menu_lockdown_title">Device lockdown</string>
    <string name="power_menu_bug_report_title">Bug report</string>
    <string name="power_menu_sound_title">Sound panel</string>
    <string name="power_menu_bug_report_disabled">Bug reporting is disabled in development settings</string>
    <string name="power_menu_screenrecord_title">Screenrecord</string>
    <string name="expanded_desktop">Expanded desktop</string>
    <string name="expanded_hide_nothing">Hide nothing</string>
    <string name="expanded_hide_status">Hide status bar</string>
    <string name="expanded_hide_navigation">Hide navigation bar</string>
    <string name="expanded_hide_both">Hide both</string>
    <string name="expanded_nothing_to_show">To add a custom per-app configuration for expanded state, set "Enabled for all" to the off position</string>
    <string name="expanded_desktop_state">Expanded state</string>
    <string name="expanded_enabled_for_all">Enabled for all</string>
    <string name="expanded_user_configurable">User configurable</string>
    <string name="expanded_desktop_style">Expanded desktop style</string>
    <string name="expanded_desktop_style_description">Choose a default expanded desktop style</string>
    <string name="expanded_desktop_title">Expanded desktop options</string>
    <string name="swap_volume_buttons_title">Reorient</string>
    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated</string>
    <string name="volume_rocker_wake_title">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
    <string name="volume_rocker_music_controls_title">Playback control</string>
    <string name="volume_rocker_music_controls_summary">When the screen is off, long-pressing the volume keys will seek music tracks</string>
    <string name="flashlight_notification_title">Flashlight notification</string>
    <string name="flashlight_notification_summary">Enable notification for when the flashlight is on</string>
    <string name="animation_title">Animations</string>
    <string name="system_animation_title">System animations</string>
    <string name="activity_open_title">Activity open animation</string>
    <string name="activity_close_title">Activity close animation</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
    <string name="volbtn_cursor_control_title">Keyboard cursor control</string>
    <string name="volume_steps_title">Volume steps</string>
    <string name="bluetooth_battery_title">Show Bluetooth battery status</string>
    <string name="bluetooth_battery_summary">Show battery status for the currently connected bluetooth device, if availible.</string>
    <string name="force_expanded_notifications_title">Force Expanded Notifications</string>
    <string name="force_expanded_notifications_summary">Available only for apps that support expanded notifications</string>
    <string name="disable_immersive_message_title">Disable Immersive Mode Messages</string>
    <string name="disable_immersive_message_summary">This will hide all Immersive Mode Messages</string>
    <string name="lockscreen_targets_message">Lockscreen swipe shortcuts</string>
    <string name="lockscreen_bottom_summary">Customize the swipe shortcuts at the bottom of the lockscreen</string>
    <string name="lockscreen_shortcuts_title">Center screen Shortcuts</string>
    <string name="lockscreen_shortcuts_summary">Add center shortcuts on lockscreen</string>
    <string name="lockscreen_shorcuts_longpress_title">Shortcuts longpress</string>
    <string name="lockscreen_shorcuts_longpress_summary">Open custom lock screen shortcuts on longpress</string>
    <string name="disable_fc_notifications_title">Disable FC Notifications</string>
    <string name="disable_fc_notifications_summary">This will hide all force close notificaitons</string>
    <string name="quick_pulldown_title">Quick pulldown</string>
    <string name="smart_pulldown_title">Smart pulldown</string>
    <string name="omni_notification_light_settings">Notifications light</string>
    <string name="power_notification_title">Power notification controls</string>
    <string name="power_notification_summary">Advanced notification controls and information</string>
    <string name="volbtn_down_zen_title">Volume down for do not disturb</string>
    <string name="volbtn_down_zen_summary">Allow volume down to enter do not disturb mode</string>
    <string name="volbtn_up_zen_title">Volume up in do not disturb</string>
    <string name="volbtn_up_zen_summary">Allow volume up to exit do not disturb mode</string>
    <string name="vol_zen_title">Do not disturb switch</string>
    <string name="vol_zen_summary">Show do not disturb switch on volume panel</string>
    <string name="status_bar_am_pm_title">AM/PM</string>
    <string name="headsup_settings_title">Peeking notifications</string>
    <string name="qs_transparent_shade">QS shade opacity</string>
    <string name="qs_stroke_title">QS shade stroke</string>
    <string name="qs_stroke_color_title">QS shade stroke color</string>
    <string name="qs_stroke_thickness_title">QS shade stroke thickness</string>
    <string name="qs_corner_radius_title">QS shade corner radius</string>
    <string name="qs_dash_width_title">QS stroke dash width</string>
    <string name="qs_dash_gap_title">QS stroke dash gap</string>
    <string name="volume_dialog_transparency">Volume dialog opacity</string>
    <string name="volume_dialog_stroke_title">Volume dialog stroke</string>
    <string name="volume_dialog_stroke_color_title">Volume dialog stroke color</string>
    <string name="volume_dialog_stroke_thickness_title">Volume dialog stroke thickness</string>
    <string name="volume_dialog_corner_radius_title">Volume dialog corner radius</string>
    <string name="volume_dialog_dash_width_title">Volume dialog stroke dash width</string>
    <string name="volume_dialog_dash_gap_title">Volume dialog stroke dash gap</string>
    <string name="power_menu_transparency">Power/reboot menu opacity</string>
    <string name="power_menu_dialog_dim">Power/reboot dialog dim background amount</string>
    <string name="volume_keys_control_media_stream_title">Volume keys control media volume</string>
    <string name="volume_keys_control_media_stream_summary">Force volume keys to control media stream</string>
</resources>