<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/statusbar" >

    <PreferenceCategory
        android:title="@string/clock">

        <ListPreference
             android:key="status_bar_clock"
             android:title="@string/status_bar_clock_style_title"
             android:dialogTitle="@string/status_bar_clock_style_title"
             android:entries="@array/status_bar_clock_style_entries"
             android:entryValues="@array/status_bar_clock_style_values" />

       <ListPreference
             android:key="status_bar_am_pm"
             android:title="@string/status_bar_am_pm_title"
             android:dialogTitle="@string/status_bar_am_pm_title"
             android:entries="@array/status_bar_am_pm_entries"
             android:entryValues="@array/status_bar_am_pm_values" />

  
     </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/notifications">

        <com.mrapocalypse.screwdshop.prefs.SystemSettingSwitchPreference
             android:key="force_expanded_notifications"
             android:title="@string/force_expanded_notifications_title"
             android:summary="@string/force_expanded_notifications_summary" />
     
        <com.mrapocalypse.screwdshop.prefs.SystemSettingSwitchPreference
              android:key="status_bar_notif_count"
              android:title="@string/status_bar_notif_count_title"
              android:summary="@string/status_bar_notif_count_summary"
              android:persistent="false" />

     </PreferenceCategory>

     <PreferenceCategory
        android:title="@string/icons">

        <com.mrapocalypse.screwdshop.prefs.SystemSettingSwitchPreference
    	   android:key="bluetooth_show_battery"
           android:title="@string/bluetooth_battery_title"
           android:summary="@string/bluetooth_battery_summary"
           android:defaultValue="false" />
  
     </PreferenceCategory>

</PreferenceScreen>