<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory 
         android:title="@string/buttons">

        <SwitchPreference
            android:key="volume_rocker_wake"
            android:summary="@string/volume_rocker_wake_summary"
            android:title="@string/volume_rocker_wake_title"
            android:defaultValue="false"
            android:disableDependentsState="true" />

        <SwitchPreference
            android:key="swap_volume_buttons"
            android:title="@string/swap_volume_buttons_title"
            android:summary="@string/swap_volume_buttons_summary" />
 
        <SwitchPreference
            android:key="volume_rocker_music_controls"
            android:summary="@string/volume_rocker_music_controls_summary"
            android:title="@string/volume_rocker_music_controls_title"
            android:defaultValue="true"
            android:dependency="volume_rocker_wake" />

         <ListPreference
            android:key="volume_key_cursor_control"
            android:dialogTitle="@string/volbtn_cursor_control_title"
            android:title="@string/volbtn_cursor_control_title"
            android:entries="@array/volbtn_cursor_control_entries"
            android:entryValues="@array/volbtn_cursor_control_values"
            android:persistent="false" />

    </PreferenceCategory>

          
          <!-- Volume Steps -->
        <Preference
                android:key="volume_steps"
                android:title="@string/volume_steps_title"
                android:fragment="com.mrapocalypse.screwdshop.frags.VolumeSteps" />


</PreferenceScreen>