<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 Screw'd AOSP

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/notifications" >

     <PreferenceScreen
            android:title="@string/power_notification_title"
            android:summary="@string/power_notification_summary">
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.systemui"
            android:targetClass="com.android.systemui.tuner.PowerNotificationControlsActivity" />
      </PreferenceScreen>

      <Preference
        android:key="notification_light"
        android:title="@string/omni_notification_light_settings"
        android:fragment="com.mrapocalypse.screwdshop.frags.batterylight.NotificationLightSettings" />

      <Preference
            android:fragment="com.mrapocalypse.screwdshop.frags.HeadsUpSettings"
            android:key="heads_up_settings"
            android:title="@string/headsup_settings_title" />

      <PreferenceCategory
            android:key="gen_opts"
            android:title="@string/general" >

            <com.mrapocalypse.screwdshop.prefs.SystemSettingSwitchPreference
                android:key="flashlight_notification"
                android:title="@string/flashlight_notification_title"
                android:summary="@string/flashlight_notification_summary"
                android:defaultValue="false" />

            <com.mrapocalypse.screwdshop.prefs.SystemSettingSwitchPreference
                android:key="disable_immersive_message"
                android:title="@string/disable_immersive_message_title"
                android:summary="@string/disable_immersive_message_summary"
                android:persistent="false" />

            <com.mrapocalypse.screwdshop.prefs.SystemSettingSwitchPreference
                android:key="disable_fc_notifications"
                android:title="@string/disable_fc_notifications_title"
                android:summary="@string/disable_fc_notifications_summary"
                android:defaultValue="false" />

      </PreferenceCategory>

</PreferenceScreen>