<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 AICP

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
        android:title="@string/qs">

    <com.mrapocalypse.screwdshop.prefs.CustomSeekBarPreference 
        android:key="qs_transparent_shade"
        android:title="@string/qs_transparent_shade"
        settings:max="255"
        settings:min="0"
        settings:units=""
        android:persistent="false" /> 

    <ListPreference
        android:key="qs_stroke"
        android:title="@string/qs_stroke_title"
        android:dialogTitle="@string/qs_stroke_title"
        android:entries="@array/qs_stroke_entries"
        android:entryValues="@array/qs_stroke_values"
        android:defaultValue="0" />

    <com.mrapocalypse.screwdshop.prefs.ColorPickerPreference
        android:key="qs_stroke_color"
        android:title="@string/qs_stroke_color_title" />

    <com.mrapocalypse.screwdshop.prefs.CustomSeekBarPreference 
        android:key="qs_stroke_thickness"
        android:title="@string/qs_stroke_thickness_title"
        settings:max="25"
        settings:min="1"
        settings:units="px"
        android:persistent="false" />

    <com.mrapocalypse.screwdshop.prefs.CustomSeekBarPreference 
        android:key="qs_corner_radius"
        android:title="@string/qs_corner_radius_title"
        settings:max="50"
        settings:min="0"
        settings:units="px"
        android:persistent="false" />

    <com.mrapocalypse.screwdshop.prefs.CustomSeekBarPreference 
        android:key="qs_dash_width"
        android:title="@string/qs_dash_width_title"
        settings:max="50"
        settings:min="0"
        settings:units="px"
        android:persistent="false" />

    <com.mrapocalypse.screwdshop.prefs.CustomSeekBarPreference 
        android:key="qs_dash_gap"
        android:title="@string/qs_dash_gap_title"
        settings:max="50"
        settings:min="1"
        settings:units="px"
        android:persistent="false" />

   </PreferenceCategory>

   <PreferenceCategory
        android:title="@string/vol_dialog">

    <com.mrapocalypse.screwdshop.prefs.CustomSeekBarPreference 
        android:key="transparent_volume_dialog"
        android:title="@string/volume_dialog_transparency"
        settings:max="255"
        settings:min="0"
        settings:units=""
        android:persistent="false" />

    <ListPreference
        android:key="volume_dialog_stroke"
        android:title="@string/volume_dialog_stroke_title"
        android:dialogTitle="@string/volume_dialog_stroke_title"
        android:entries="@array/volume_dialog_stroke_entries"
        android:entryValues="@array/volume_dialog_stroke_values"
        android:defaultValue="0" />

    <com.mrapocalypse.screwdshop.prefs.ColorPickerPreference
        android:key="volume_dialog_stroke_color"
        android:title="@string/volume_dialog_stroke_color_title"
        android:defaultValue="0xffffffff" />

    <com.mrapocalypse.screwdshop.prefs.CustomSeekBarPreference 
        android:key="volume_dialog_stroke_thickness"
        android:title="@string/volume_dialog_stroke_thickness_title"
        settings:max="25"
        settings:min="1"
        settings:units="px"
        android:persistent="false" />

    <com.mrapocalypse.screwdshop.prefs.CustomSeekBarPreference 
        android:key="volume_dialog_corner_radius"
        android:title="@string/volume_dialog_corner_radius_title"
        settings:max="50"
        settings:min="0"
        settings:units="px"
        android:persistent="false" />

    <com.mrapocalypse.screwdshop.prefs.CustomSeekBarPreference 
        android:key="volume_dialog_dash_width"
        android:title="@string/volume_dialog_dash_width_title"
        settings:max="50"
        settings:min="0"
        settings:units="px"
        android:persistent="false" />

    <com.mrapocalypse.screwdshop.prefs.CustomSeekBarPreference 
        android:key="volume_dialog_dash_gap"
        android:title="@string/volume_dialog_dash_gap_title"
        settings:max="50"
        settings:min="1"
        settings:units="px"
        android:persistent="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/powermenu">

    <com.mrapocalypse.screwdshop.prefs.CustomSeekBarPreference 
        android:key="transparent_power_menu"
        android:title="@string/power_menu_transparency"
        settings:max="100"
        settings:min="0"
        settings:units="%"
        android:persistent="false" />

    <com.mrapocalypse.screwdshop.prefs.CustomSeekBarPreference 
        android:key="transparent_power_dialog_dim"
        android:title="@string/power_menu_dialog_dim"
        settings:max="100"
        settings:min="0"
        settings:units="%"
        android:persistent="false" />
    </PreferenceCategory>

</PreferenceScreen>
