<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory 
         android:title="@string/shortcuts">

        <PreferenceScreen
            android:key="lockscreen_shortcuts"
            android:fragment="com.mrapocalypse.screwdshop.dslv.ActionListViewSettings"
            android:summary="@string/lockscreen_shortcuts_summary"
            android:title="@string/lockscreen_shortcuts_title">
                <extra android:name="actionMode" android:value="4" />
                <extra android:name="maxAllowedActions" android:value="5" />
                <extra android:name="disableLongpress" android:value="true" />
                <extra android:name="useAppPickerOnly" android:value="true" />
        </PreferenceScreen>

        <SwitchPreference
            android:key="lockscreen_shortcuts_longpress"
            android:title="@string/lockscreen_shorcuts_longpress_title"
            android:summary="@string/lockscreen_shorcuts_longpress_summary" />

         <PreferenceScreen
            android:title="@string/lockscreen_targets_message"
            android:summary="@string/lockscreen_bottom_summary" >
            <intent
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.screwd.LockscreenShortcutsActivity" />
        </PreferenceScreen>

    </PreferenceCategory>
 

</PreferenceScreen>