<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 Screw'd AOSP

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory 
         android:title="@string/vol_rock">

         <com.mrapocalypse.screwdshop.prefs.SystemSettingSwitchPreference
            android:key="swap_volume_buttons"
            android:title="@string/swap_volume_buttons"
            android:defaultValue="true" />

         <com.mrapocalypse.screwdshop.prefs.SystemSettingSwitchPreference
            android:key="volume_keys_control_media_stream"
            android:title="@string/volume_keys_control_media_stream_title"
            android:summary="@string/volume_keys_control_media_stream_summary"
            android:defaultValue="true" />

         <com.mrapocalypse.screwdshop.prefs.SystemSettingSwitchPreference
            android:key="sysui_volume_down_silent"
            android:title="@string/volbtn_down_zen_title"
            android:summary="@string/volbtn_down_zen_summary"
            android:defaultValue="true"/>

         <com.mrapocalypse.screwdshop.prefs.SystemSettingSwitchPreference
            android:key="sysui_volume_up_silent"
            android:title="@string/volbtn_up_zen_title"
            android:summary="@string/volbtn_up_zen_summary"
            android:defaultValue="true" />

         <com.mrapocalypse.screwdshop.prefs.SystemSettingSwitchPreference
            android:key="sysui_show_full_zen"
            android:title="@string/vol_zen_title"
            android:summary="@string/vol_zen_summary"
            android:defaultValue="false"/>
	    
         <com.mrapocalypse.screwdshop.prefs.SystemSettingSwitchPreference
            android:key="volume_button_music_control"
            android:summary="@string/volume_rocker_music_controls_summary"
            android:title="@string/volume_rocker_music_controls_title"
            android:defaultValue="true" />
	    
	 <ListPreference
            android:dialogTitle="@string/volume_key_cursor_control_title"
            android:entries="@array/volume_key_cursor_control_entries"
            android:entryValues="@array/volume_key_cursor_control_values"
            android:key="volume_key_cursor_control"
            android:title="@string/volume_key_cursor_control_title" />    

    </PreferenceCategory>


</PreferenceScreen>