<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/misc" >

     <com.mrapocalypse.screwdshop.prefs.SystemSettingSwitchPreference
        android:key="flashlight_notification"
        android:title="@string/flashlight_notification_title"
        android:summary="@string/flashlight_notification_summary"
        android:defaultValue="false" />

     <com.mrapocalypse.screwdshop.prefs.SystemSettingSwitchPreference
        android:key="disable_immersive_message"
        android:title="@string/disable_immersive_message_title"
        android:summary="@string/disable_immersive_message_summary"
        android:persistent="false" />


</PreferenceScreen>