<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="status_bar"
        android:title="@string/statusbar"
        android:fragment="com.mrapocalypse.screwdshop.frags.StatusbarFrag" />

    <Preference
        android:key="quick_settings"
        android:title="@string/qs"
        android:fragment="com.mrapocalypse.screwdshop.frags.QSFrag" />

    <Preference
        android:key="expanded_desktop"
        android:title="@string/ex_desk"
        android:fragment="com.mrapocalypse.screwdshop.frags.ExpandedDesktopPreferenceFragment" />

    <Preference
        android:key="animations"
        android:title="@string/animations"
        android:fragment="com.mrapocalypse.screwdshop.frags.AnimFrag" />

    <Preference
        android:key="recents"
        android:title="@string/recents"
        android:fragment="com.mrapocalypse.screwdshop.frags.RecentsFrag" />

</PreferenceScreen>